<resources>
    <string name="app_name">Movies</string>
    <string name="popular_movies">Popular</string>
    <string name="upcoming_movies">Upcoming</string>
    <string name="favorite_movies">Favorite</string>
    <string name="account_movies">Account</string>
    <string name="movie_details">Movie details</string>
    <string name="movie_search">Search Movie</string>

    <string name="visit_website">Visit website</string>

    <string name="no_release_date">No release date</string>
    <string name="no_ratings">No ratings</string>
    <string name="no_data_na">N/A</string>

    <!-- Patterns -->
    <string name="runtime_pattern_single">%s hour and %s minutes</string>
    <string name="runtime_pattern_multiple">%s hours and %s minutes</string>
    <string name="votes_pattern">%s votes</string>
    <string name="revenue_pattern" translatable="false">%s mill.</string>
    <string name="movie_row_desc_pattern" translatable="false">%s\u0020\u0020&#8226;\u0020\u0020%s</string>
    <string name="visit_website_url_pattern" translatable="false"><![CDATA[<a href="%s">%s</a>]]></string>
    <string name="error_message_pattern">Error: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>

    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="rated_movies">My Ratings</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Sign Out</string>
</resources>
